--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -40,10 +40,10 @@
 				div.slide-in
 					position: absolute
 					top: 0
-					left: -300px
+					left: -400px
 					visibility: hidden
 					height: 60px
-					width: 300px
+					width: 400px
 					@include transition(left, 0.3s)
 
 				&:hover div.slide-in
@@ -62,7 +62,10 @@
 
 
 				.quick-action
-					background: rgba(0,100,0,0.8)
+					padding: 15px
+					-moz-box-sizing: border-box
+					box-sizing: border-box
+					background: rgba(0,0,0,0.8)
 
 
 		
