--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -5,9 +5,10 @@
 @import toolbar
 @import modals
 @import stack
+@import finder
 @import interface-elements
 @import animations
-@import keymedia
+@import keymedia-views
 @import object-edit
 @import visual-style
 
