Update with pencils

--- a/css/ie-legacy.css
+++ b/css/ie-legacy.css
@@ -6,5 +6,4 @@
 .eze .eze-smallmodal { border: 2px solid #555!important;}
 	.eze .eze-smallmodal .arrow { color: #555!important;}
 
-
-
+.eze .eze-comments li .add-comment .btn { top: 1px!important; }
