--- a/css/eze.css
+++ b/css/eze.css
@@ -515,6 +515,115 @@
     .eze .finder .kp-finder-content ul li a span {
       line-height: 34px; } }
 
+.eze .kp-edit-block {
+  position: relative; }
+
+.eze .kp-edit-block-box, .attribute-direct-edit {
+  border-radius: 4px;
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+  position: absolute;
+  z-index: 100;
+  opacity: 0.8; }
+  .eze .kp-edit-block-box:hover, .attribute-direct-edit:hover {
+    opacity: 1; }
+
+.eze .kp-edit-block-box {
+  border: 1px solid black;
+  background-color: #020202;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#5c5c5c), to(#020202));
+  background-image: -webkit-linear-gradient(top, #5c5c5c, #020202);
+  background-image: -moz-linear-gradient(top, #5c5c5c, #020202);
+  background-image: -ms-linear-gradient(top, #5c5c5c, #020202);
+  background-image: -o-linear-gradient(top, #5c5c5c, #020202);
+  background-image: linear-gradient(top, #5c5c5c, #020202);
+  -webkit-box-shadow: 0 0 5px black, 0 1px 0 rgba(255, 255, 255, 0.2) inset;
+  -moz-box-shadow: 0 0 5px black, 0 1px 0 rgba(255, 255, 255, 0.2) inset;
+  box-shadow: 0 0 5px black, 0 1px 0 rgba(255, 255, 255, 0.2) inset;
+  -webkit-transition: opacity 0.2s ease-out;
+  -moz-transition: opacity 0.2s ease-out;
+  -o-transition: opacity 0.2s ease-out;
+  transition: opacity 0.2s ease-out; }
+  .eze .kp-edit-block-box.active {
+    width: auto;
+    height: auto;
+    opacity: 1;
+    z-index: 101; }
+    .eze .kp-edit-block-box.active ul {
+      width: auto;
+      height: auto; }
+      .eze .kp-edit-block-box.active ul li {
+        display: block;
+        opacity: 1;
+        filter: alpha(opacity=100);
+        color: #eeeeee;
+        font-size: 11px; }
+        .eze .kp-edit-block-box.active ul li.seperator {
+          background: #222222;
+          padding: 6px 0 2px 6px; }
+  .eze .kp-edit-block-box ul {
+    height: 28px;
+    width: 28px;
+    display: block;
+    overflow: hidden;
+    border-radius: 4px;
+    margin: 0;
+    background: url("../gfx/legacy-sprite.png") -572px 0 no-repeat; }
+    .eze .kp-edit-block-box ul li {
+      display: none;
+      opacity: 0;
+      filter: alpha(opacity=0);
+      -webkit-transition: all 0.3s ease-out;
+      -moz-transition: all 0.3s ease-out;
+      -o-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out; }
+      .eze .kp-edit-block-box ul li:first-child a {
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px; }
+      .eze .kp-edit-block-box ul li:last-child a {
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px; }
+      .eze .kp-edit-block-box ul li a {
+        font: normal 12px/18px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        background: #222222;
+        border-bottom: 1px solid #333333;
+        color: #ffa200;
+        text-decoration: none;
+        display: block;
+        padding: 3px 15px 3px 6px;
+        -webkit-transition: all 0.2s ease-out;
+        -moz-transition: all 0.2s ease-out;
+        -o-transition: all 0.2s ease-out;
+        transition: all 0.2s ease-out; }
+        .eze .kp-edit-block-box ul li a:hover {
+          background: black; }
+
+.attribute-direct-edit {
+  border: 1px solid white;
+  background-color: #ededed;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#ededed));
+  background-image: -webkit-linear-gradient(top, white, #ededed);
+  background-image: -moz-linear-gradient(top, white, #ededed);
+  background-image: -ms-linear-gradient(top, white, #ededed);
+  background-image: -o-linear-gradient(top, white, #ededed);
+  background-image: linear-gradient(top, white, #ededed);
+  -webkit-box-shadow: 0 0 5px black, 0 1px 0 rgba(255, 255, 255, 0.2) inset;
+  -moz-box-shadow: 0 0 5px black, 0 1px 0 rgba(255, 255, 255, 0.2) inset;
+  box-shadow: 0 0 5px black, 0 1px 0 rgba(255, 255, 255, 0.2) inset;
+  -webkit-transition: opacity 0.2s ease-out;
+  -moz-transition: opacity 0.2s ease-out;
+  -o-transition: opacity 0.2s ease-out;
+  transition: opacity 0.2s ease-out;
+  opacity: 0.9; }
+  .attribute-direct-edit span {
+    height: 16px;
+    width: 16px;
+    display: block;
+    border-radius: 4px;
+    background: url("../gfx/legacy-sprite.png") -562px -25px no-repeat;
+    margin: 7px 0 0 5px; }
+
 .eze .eze-items {
   list-style-type: none;
   margin: 0 0 10px 0; }
@@ -822,6 +931,9 @@
     width: 100%; }
   .eze .eze-object-attributes .eze-matrix p {
     float: right; }
+    .eze .eze-object-attributes .eze-matrix p .btn {
+      float: right;
+      margin-left: 5px; }
     .eze .eze-object-attributes .eze-matrix p select {
       width: 50px; }
 .eze .eze-object-sidebar {
