--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -6,6 +6,7 @@
 @import modals
 @import stack
 @import finder
+@import pencils
 @import interface-elements
 @import animations
 @import keymedia-views
