--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -26,6 +26,7 @@
 			max-width: 1100px
 
 			h1
+				float: left
 				font: normal 12px/32px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
 			img
