--- a/css/sass/pencils.sass
+++ b/css/sass/pencils.sass
@@ -49,7 +49,7 @@
 		overflow: hidden
 		border-radius: 4px
 		margin: 0
-		background: url('../gfx/legacy-sprite.png') -572px 0 no-repeat
+		background: url('../images/legacy-sprite.png') -572px 0 no-repeat
 
 		li
 			display: none
@@ -90,5 +90,5 @@
 		width: 16px
 		display: block
 		border-radius: 4px
-		background: url('../gfx/legacy-sprite.png') -562px -25px no-repeat
+		background: url('../images/legacy-sprite.png') -562px -25px no-repeat
 		margin: 7px 0 0 5px
