--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -76,14 +76,14 @@
 
 
 		b
-			background: url(../gfx/sprite.png)
+			background: url(../images/sprite.png)
 			display: block
 			width: 62px
 			height: 28px
 			margin: 0 0 2px 0
 
 			@media only screen and (-webkit-min-device-pixel-ratio: 1.5)
-				background: url(../gfx/sprite@2x.png)
+				background: url(../images/sprite@2x.png)
 				-webkit-background-size: 640px 640px
 				background-size: 640px 640px
 
